# PokemonApi

./: .gitignore  README.md  pyproject.toml
pokedex-back/: local_settings_example.py  settings.py
