[tool.poetry]
name = "pokedex"
version = "0.1.0"
description = "projet pokemonApi"
authors = ["Mbarga, Ngouani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
django-env-overrides = "^0.1.0"
django-extensions = "^3.2.3"
django-cors-headers = "^4.3.0"
uwsgi = "^2.0.22"
whitenoise = "^6.6.0"
djangorestframework-simplejwt = "^5.3.0"
drf-spectacular = "^0.26.5"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
faker = "^19.11.0"
pre-commit = "^3.5.0"
black = "^23.10.0"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.6.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
